--- a/client/src/app/components/doc-editor/doc-editor.component.html
+++ b/client/src/app/components/doc-editor/doc-editor.component.html
@@ -1,1 +1,7 @@
-<ejs-documenteditorcontainer #document_editor (created)="onCreated()" (contentChange)="saveResult()" enableToolbar="false" serviceUrl="https://ej2services.syncfusion.com/production/web-services/api/documenteditor/"> </ejs-documenteditorcontainer>
+<ejs-documenteditorcontainer
+  #document_editor
+  enableToolbar="true"
+  (created)="onCreated()"
+  serviceUrl="https://ej2services.syncfusion.com/production/web-services/api/documenteditor/"
+>
+</ejs-documenteditorcontainer>
