--- a/client/src/app/components/excel/excel.component.html
+++ b/client/src/app/components/excel/excel.component.html
@@ -1,1 +1,6 @@
-<ejs-spreadsheet> </ejs-spreadsheet>
+<ejs-spreadsheet
+  #spreadsheet
+  openUrl="https://ej2services.syncfusion.com/production/web-services/api/spreadsheet/open"
+  allowOpen="true"
+>
+</ejs-spreadsheet>
