--- a/client/src/app/components/assessment/assessment.component.html
+++ b/client/src/app/components/assessment/assessment.component.html
@@ -22,7 +22,7 @@
             consectetur adipisicing elit. Laudantium, accusantium
           </p>
         </div>
-        <div class="answer wrong">
+        <div class="answer">
           <p class="answer-text">
             <input type="radio" class="radio" />Lorem ipsum dolor sit amet
             consectetur adipisicing elit. Laudantium, accusantium
@@ -34,7 +34,7 @@
             consectetur adipisicing elit. Laudantium, accusantium
           </p>
         </div>
-        <div class="answer correct">
+        <div class="answer">
           <p class="answer-text">
             <input type="radio" class="radio" />Lorem ipsum dolor sit amet
             consectetur adipisicing elit. Laudantium, accusantium
@@ -60,7 +60,71 @@
             consectetur adipisicing elit. Laudantium, accusantium
           </p>
         </div>
-        <div class="answer correct">
+        <div class="answer">
+          <p class="answer-text">
+            <input type="radio" class="radio" />Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Laudantium, accusantium
+          </p>
+        </div>
+        <div class="answer">
+          <p class="answer-text">
+            <input type="radio" class="radio" />Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Laudantium, accusantium
+          </p>
+        </div>
+      </div>
+      <hr />
+      <div class="question">
+        <div class="question-group">
+          <p class="question-text">3. What is Logistics?</p>
+          <p class="marks">2 marks</p>
+        </div>
+
+        <div class="answer">
+          <p class="answer-text">
+            <input type="radio" class="radio" />Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Laudantium, accusantium
+          </p>
+        </div>
+        <div class="answer">
+          <p class="answer-text">
+            <input type="radio" class="radio" />Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Laudantium, accusantium
+          </p>
+        </div>
+        <div class="answer">
+          <p class="answer-text">
+            <input type="radio" class="radio" />Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Laudantium, accusantium
+          </p>
+        </div>
+        <div class="answer">
+          <p class="answer-text">
+            <input type="radio" class="radio" />Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Laudantium, accusantium
+          </p>
+        </div>
+      </div>
+      <hr />
+      <div class="question">
+        <div class="question-group">
+          <p class="question-text">4. What is Logistics?</p>
+          <p class="marks">2 marks</p>
+        </div>
+
+        <div class="answer">
+          <p class="answer-text">
+            <input type="radio" class="radio" />Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Laudantium, accusantium
+          </p>
+        </div>
+        <div class="answer">
+          <p class="answer-text">
+            <input type="radio" class="radio" />Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Laudantium, accusantium
+          </p>
+        </div>
+        <div class="answer">
           <p class="answer-text">
             <input type="radio" class="radio" />Lorem ipsum dolor sit amet
             consectetur adipisicing elit. Laudantium, accusantium
