--- a/client/src/app/components/course-staff/course-staff.component.html
+++ b/client/src/app/components/course-staff/course-staff.component.html
@@ -304,13 +304,6 @@
     <hr />
     <div class="article-box">
       <app-file-preview></app-file-preview>
-      <app-file-preview></app-file-preview>
-      <app-file-preview></app-file-preview>
-      <app-file-preview></app-file-preview>
-      <app-file-preview></app-file-preview>
-      <app-file-preview></app-file-preview>
-      <app-file-preview></app-file-preview>
-      <app-file-preview></app-file-preview>
     </div>
   </article>
   <article>
@@ -389,6 +382,23 @@
             </td>
             <td>
               <label>Level 400</label>
+            </td>
+            <td>
+              <button class="btn btn-success">Grade</button>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <label>Kasompe Mfula</label>
+            </td>
+            <td>
+              <label>201700255</label>
+            </td>
+            <td>
+              <label>74.25%</label>
+            </td>
+            <td>
+              <label>Level 300</label>
             </td>
             <td>
               <button class="btn btn-success">Grade</button>
@@ -475,7 +485,30 @@
               <label>92%</label>
             </td>
             <td>
-              <label>22/10/2022</label>
+              <label>22/11/2022</label>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <label>Kasompe Mfula</label>
+            </td>
+            <td>
+              <label>201700255</label>
+            </td>
+            <td>
+              <a class="link" href="#">Test 1</a>
+            </td>
+            <td>
+              <label>76%</label>
+            </td>
+            <td>
+              <label>67.5%</label>
+            </td>
+            <td>
+              <label>92%</label>
+            </td>
+            <td>
+              <label>22/11/2022</label>
             </td>
           </tr>
         </tbody>
@@ -540,7 +573,7 @@
         <tbody>
           <tr>
             <td>
-              <label>201903550, 20184200, 20179240</label>
+              <label>201903550, 201700255</label>
             </td>
             <td>
               <a class="link" href="#">Case Study 1</a>
