--- a/client/src/app/components/course/course.component.html
+++ b/client/src/app/components/course/course.component.html
@@ -173,9 +173,8 @@
     </div>
     <hr />
     <div class="article-box-block">
-      <a class="link" href="#">Test 2</a>
-      <a class="link" href="#">Quiz 4</a>
-      <a class="link" href="#">Unitrans Case Study</a>
+      <a class="link" routerLink="/assessment" href="#">Quiz 4</a>
+      <a class="link" routerLink="/assignment" href="#">Unitrans Case Study</a>
     </div>
   </article>
   <article>
@@ -208,13 +207,6 @@
     </div>
     <hr />
     <div class="article-box">
-      <app-file-preview></app-file-preview>
-      <app-file-preview></app-file-preview>
-      <app-file-preview></app-file-preview>
-      <app-file-preview></app-file-preview>
-      <app-file-preview></app-file-preview>
-      <app-file-preview></app-file-preview>
-      <app-file-preview></app-file-preview>
       <app-file-preview></app-file-preview>
     </div>
   </article>
