--- a/client/src/app/components/student-dashboard/student-dashboard.component.html
+++ b/client/src/app/components/student-dashboard/student-dashboard.component.html
@@ -236,7 +236,7 @@
                   the card.
                 </p>
                 <progress class="progress-bar" value="32" max="100"></progress>
-                <button class="card-btn">View</button>
+                <button class="card-btn" routerLink="/course">View</button>
               </div>
             </div>
           </div>
