--- a/client/src/app/components/teacher-dashboard/teacher-dashboard.component.html
+++ b/client/src/app/components/teacher-dashboard/teacher-dashboard.component.html
@@ -231,7 +231,9 @@
                   This is a course synopsis example to see how it will look on
                   the card.
                 </p>
-                <button class="card-btn">View & Edit</button>
+                <button class="card-btn" routerLink="/teacher-course">
+                  View & Edit
+                </button>
               </div>
             </div>
           </div>
