--- a/client/src/app/components/excel/excel.component.html
+++ b/client/src/app/components/excel/excel.component.html
@@ -1,5 +1,6 @@
 <ejs-spreadsheet
   #spreadsheet
+  (created)="loadDoc()"
   openUrl="https://ej2services.syncfusion.com/production/web-services/api/spreadsheet/open"
   allowOpen="true"
 >
