--- a/client/src/app/components/pdf/pdf.component.html
+++ b/client/src/app/components/pdf/pdf.component.html
@@ -1,6 +1,7 @@
 <div class="content-wrapper">
   <ejs-pdfviewer
     id="pdfViewer"
+    (created)="loadDoc()"
     [serviceUrl]="service"
     style="height: 640px; display: block"
   ></ejs-pdfviewer>
