--- a/client/src/app/components/calendar/calendar.component.html
+++ b/client/src/app/components/calendar/calendar.component.html
@@ -58,12 +58,12 @@
         >
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" routerLink="/myoffice"
+        <a class="nav-link" routerLinkActive="active" href="/myoffice"
           >My Office</a
         >
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" routerLink="/mydrive"
+        <a class="nav-link" routerLinkActive="active" href="/mydrive"
           >My Drive</a
         >
       </li>
