--- a/client/src/app/components/doc-editor/doc-editor.component.html
+++ b/client/src/app/components/doc-editor/doc-editor.component.html
@@ -1,7 +1,15 @@
-<ejs-documenteditorcontainer
-  #document_editor
-  enableToolbar="true"
-  (created)="onCreated()"
-  serviceUrl="https://ej2services.syncfusion.com/production/web-services/api/documenteditor/"
->
-</ejs-documenteditorcontainer>
+<nav class="navbar navbar-expand-md navbar-dark fixed-top">
+  <button class="btn btn-success" (click)="saveResult()">Save Changes</button>
+</nav>
+
+<body class="doc">
+  <ejs-documenteditorcontainer
+    #document_editor
+    enableToolbar="true"
+    height="800px"
+    style="display: block"
+    (created)="onCreated()"
+    serviceUrl="https://ej2services.syncfusion.com/production/web-services/api/documenteditor/"
+  >
+  </ejs-documenteditorcontainer>
+</body>
